--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                 <li>
-                    <img src="/images/What are we doing/totype.jpg" alt="Человек печатает" width="370">
+                    <img src="./images/What are we doing/totype.jpg" alt="Человек печатает" width="370">
                     </li>
                 <li>
-                    <img src="/images/What are we doing/analysis.jpg" alt="Человек анализирует" width="370">
+                    <img src="./images/What are we doing/analysis.jpg" alt="Человек анализирует" width="370">
                 </li>
                 <li>
-                    <img src="/images/What are we doing/painting.jpg" alt="Человек рисует" width="370">
+                    <img src="./images/What are we doing/painting.jpg" alt="Человек рисует" width="370">
                 </li>
             </ul>
         </section>
