--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <nav>
             <a href="WebStudio">WebStudio</a>
             <ul>
-                <li href="">Студия</li>
-                <li href="">Портфолио</li>
-                <li href="">Контакты</li>
+                <li>
+                    <a href="">Студия</a>
+                </li>
+                <li>
+                    <a href="">Портфолио</a>
+                </li>
+                <li>
+                    <a href="">Контакты</a>
+                </li>
             </ul>
     </nav>
         <ul>
@@ -50,13 +56,13 @@
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                 <li>
-                    <img src="./images/What are we doing/totype.jpg" alt="Человек печатает" width="370">
+                    <img src="./images/what_are_we_doing/totype.jpg" alt="Человек печатает" width="370">
                     </li>
                 <li>
-                    <img src="./images/What are we doing/analysis.jpg" alt="Человек анализирует" width="370">
+                    <img src="./images/what_are_we_doing/analysis.jpg" alt="Человек анализирует" width="370">
                 </li>
                 <li>
-                    <img src="./images/What are we doing/painting.jpg" alt="Человек рисует" width="370">
+                    <img src="./images/what_are_we_doing/painting.jpg" alt="Человек рисует" width="370">
                 </li>
             </ul>
         </section>
@@ -64,7 +70,7 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/team/Игорь Демьяненко.jpg" 
+                    <img src="./images/team/productdesigner.jpg" 
                         alt="Игорь Демьяненко" 
                         width="270" 
                         height="260">
@@ -72,21 +78,21 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team/Ольга Репина.jpg" alt="Ольга Репина" 
+                    <img src="./images/team/frontenddeveloper.jpg" alt="Ольга Репина" 
                         width="270" 
                         height="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team/Николай Тарасов.jpg" alt="Николай Тарасов" 
+                    <img src="./images/team/marketing.jpg" alt="Николай Тарасов" 
                         width="270" 
                         height="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team/Михаил Ермаков.jpg" alt="Михаил Ермаков" 
+                    <img src="./images/team/uidesigner.jpg" alt="Михаил Ермаков" 
                         width="270" 
                         height="260">
                     <h3>Михаил Ермаков</h3>
