--- a/portfolio.html
+++ b/portfolio.html
@@ -32,99 +32,97 @@
         </ul>
     </header>
     <main>
-        <section class="filter">
-            <ul class="filter-list list">
+        <section class="galery">
+            <ul class="galery-filter list">
                 <li>
-                    <button class="filter-btn" type="button">Все</button>
+                    <button class="galery-filter-btn" type="button">Все</button>
                 </li>
                 <li>
-                    <button class="filter-btn" type="button">Веб-сайты</button>
+                    <button class="galery-filter-btn" type="button">Веб-сайты</button>
                 </li>
                 <li>
-                    <button class="filter-btn" type="button">Приложения</button>
+                    <button class="galery-filter-btn" type="button">Приложения</button>
                 </li>
                 <li>
-                    <button class="filter-btn" type="button">Дизайн</button>
+                    <button class="galery-filter-btn" type="button">Дизайн</button>
                 </li>
                 <li>
-                    <button class="filter-btn" type="button">Маркетинг</button>
+                    <button class="galery-filter-btn" type="button">Маркетинг</button>
                 </li>
             </ul>
-        </section>
-        <section class="galery">
             <ul class="galery-list list">
                 <li class="galery-list-item">
                     <img src="./images/gallery/technoquack.png" 
                     alt="Технокряк" width="370">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p> 
+                    <h2 class="galery-list-title">Технокряк</h2>
+                    <p class="galery-list-subtitle">Веб-сайт</p> 
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/new_orlean_vs_golden_star.png" 
                     alt="Постер New Orlean vs Golden Star" width="370">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="galery-list-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="galery-list-subtitle">Дизайн</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/seafood.png" 
                     alt="Ресторан Seafood" width="370">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="galery-list-title">Ресторан Seafood</h2>
+                    <p class="galery-list-subtitle">Приложение</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/prime.png" 
                     alt="Проект Prime" width="370">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="galery-list-title">Проект Prime</h2>
+                    <p class="galery-list-subtitle">Маркетинг</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/boxes.png" 
                     alt="Проект Boxes" width="370">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="galery-list-title">Проект Boxes</h2>
+                    <p class="galery-list-subtitle">Приложение</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/inspiration_has_no_borders.png" 
                     alt="Inspiration has no Borders" width="370">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="galery-list-title">Inspiration has no Borders</h2>
+                    <p class="galery-list-subtitle">Веб-сайт</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/limited_edition.png" 
                     alt="Издание Limited Edition" width="370">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="galery-list-title">Издание Limited Edition</h2>
+                    <p class="galery-list-subtitle">Дизайн</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/lab.png" 
                     alt="Проект LAB" width="370">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="galery-list-title">Проект LAB</h2>
+                    <p class="galery-list-subtitle">Маркетинг</p>
                 </li>
                 <li class="galery-list-item">
                     <img src="./images/gallery/growing_business.png" 
                     alt="Growing Business" width="370">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="galery-list-title">Growing Business</h2>
+                    <p class="galery-list-subtitle">Приложение</p>
                 </li>
             </ul>
         </section>
-        <footer class="contact-info ">
-            <a class="logo link" href="WebStudio">Web<span class="logo-accent-secondary">Studio</span></a>
-            <address>
-            <ul class="contact-info-list list" >
-                <li class="contact-info-item link">
-                    <a class="contact-info-link-geo link" href="https://goo.gl/maps/p29ZWmAtgmgeGxHdA">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="contact-info-item"> 
-                    <a class="contact-info-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-            <li class="contact-info-item">
-                <a class="contact-info-link link" href="tel:"+380961111111">+38 096 111 11 11</a>
-            </li>
-            </ul>
-            </address>
-        </footer>
     </main>
+    <footer class="contact-info ">
+        <a class="logo link" href="WebStudio">Web<span class="logo-accent-secondary">Studio</span></a>
+        <address>
+        <ul class="contact-info-list list" >
+            <li class="contact-info-item link">
+                <a class="contact-info-link-geo link" href="https://goo.gl/maps/p29ZWmAtgmgeGxHdA">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="contact-info-item"> 
+                <a class="contact-info-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+        <li class="contact-info-item">
+            <a class="contact-info-link link" href="tel:"+380961111111">+38 096 111 11 11</a>
+        </li>
+        </ul>
+        </address>
+    </footer>
 </body>
 </html>
