--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
             </ul>
     </nav>
         <ul class="header-contact-list list">
-            <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contact" href="tel:"+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="header-contact link" href="tel:"+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
